[Fix]issue with social icons on footer
fixed issue with social icons not aligning correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ footer {
 }
 
 /* Social icons */
-.social-links a {
+.socials a {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -345,6 +345,10 @@ a {
     .card-body {
         min-height: 430px;
     }
+
+    .socials{
+        padding-left: 45px;
+    }
 }
 
 /* Medium devices (laptops, 1024px and up) */
@@ -375,5 +379,9 @@ a {
 
     .card-body {
         min-height: 0px;
+    }
+    
+    .socials{
+        padding-left: 380px;
     }
 }
